[gd_scene load_steps=5 format=3 uid="uid://cn7pxdjy5lhsi"]

[ext_resource type="Script" uid="uid://f1ydmcr16kuh" path="res://scenes/main_menu/main_menu.gd" id="1_fsom3"]
[ext_resource type="PackedScene" uid="uid://d4afimgx37fqq" path="res://scenes/battle/battle.tscn" id="2_ob46e"]
[ext_resource type="PackedScene" uid="uid://d0fce0n5450h7" path="res://scenes/waiting_room/waiting_room.tscn" id="3_uqeha"]
[ext_resource type="PackedScene" uid="uid://c8shcaswd61gh" path="res://scenes/lobbies/lobbies.tscn" id="4_uqeha"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsom3")
_battle_scene = ExtResource("2_ob46e")
_waiting_room_scene = ExtResource("3_uqeha")
_lobbies_scene = ExtResource("4_uqeha")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.5
offset_top = -98.5
offset_right = 227.5
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayVsAI" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Vs AI"

[node name="HostGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
